added default columns _owner,_role,_rev

--- a/git/formuladb-env/db/InventoryOrder.yaml
+++ b/git/formuladb-env/db/InventoryOrder.yaml
@@ -44,4 +44,7 @@ props:
         referencedEntityName: OrderItem
         props: {}
         isLargeTable: true
+    _owner: { name: _owner, propType_: STRING, allowNull: false }
+    _role: { name: _role, propType_: STRING, allowNull: false }
+    _rev: { name: _rev, propType_: STRING, allowNull: false }
 isEditable: true
