--- a/git/formuladb-env/db/LargeSalesProduct.yaml
+++ b/git/formuladb-env/db/LargeSalesProduct.yaml
@@ -18,4 +18,7 @@ props:
         formula: >-
             SUMIF(OrderItem.quantity, product_id == @[product_id] && quantity >
             100)
+    _owner: { name: _owner, propType_: STRING, allowNull: false }
+    _role: { name: _role, propType_: STRING, allowNull: false }
+    _rev: { name: _rev, propType_: STRING, allowNull: false }
 isEditable: true
