--- a/git/formuladb-env/db/ProductLocation.yaml
+++ b/git/formuladb-env/db/ProductLocation.yaml
@@ -51,6 +51,9 @@ props:
         name: state
         propType_: STRING
         allowNull: false
+    _owner: { name: _owner, propType_: STRING, allowNull: false }
+    _role: { name: _role, propType_: STRING, allowNull: false }
+    _rev: { name: _rev, propType_: STRING, allowNull: false }
 validations:
     positiveStock:
         conditionExpr:
