--- a/git/formuladb-env/db/ReceiptItem.yaml
+++ b/git/formuladb-env/db/ReceiptItem.yaml
@@ -22,4 +22,7 @@ props:
         name: units
         propType_: CHILD_TABLE
         referencedEntityName: InventoryProductUnit
+    _owner: { name: _owner, propType_: STRING, allowNull: false }
+    _role: { name: _role, propType_: STRING, allowNull: false }
+    _rev: { name: _rev, propType_: STRING, allowNull: false }
 isEditable: true
