--- a/git/formuladb-env/db/Room.yaml
+++ b/git/formuladb-env/db/Room.yaml
@@ -14,3 +14,6 @@ props:
         propType_: REFERENCE_TO
         referencedEntityName: Room_Type
         referencedPropertyName: _id
+    _owner: { name: _owner, propType_: STRING, allowNull: false }
+    _role: { name: _role, propType_: STRING, allowNull: false }
+    _rev: { name: _rev, propType_: STRING, allowNull: false }
