--- a/git/formuladb-env/db/WishListRequest.yaml
+++ b/git/formuladb-env/db/WishListRequest.yaml
@@ -17,3 +17,6 @@ props:
     comments:
         name: comments
         propType_: STRING
+    _owner: { name: _owner, propType_: STRING, allowNull: false }
+    _role: { name: _role, propType_: STRING, allowNull: false }
+    _rev: { name: _rev, propType_: STRING, allowNull: false }
