--- a/git/formuladb-env/db/InventoryProduct.yaml
+++ b/git/formuladb-env/db/InventoryProduct.yaml
@@ -23,4 +23,7 @@ props:
         propType_: CHILD_TABLE
         referencedEntityName: ProductLocation
         props: {}
+    _owner: { name: _owner, propType_: STRING, allowNull: false }
+    _role: { name: _role, propType_: STRING, allowNull: false }
+    _rev: { name: _rev, propType_: STRING, allowNull: false }
 isEditable: true
