--- a/git/formuladb-env/db/InventoryReceipt.yaml
+++ b/git/formuladb-env/db/InventoryReceipt.yaml
@@ -11,3 +11,6 @@ props:
         referencedEntityName: ReceiptItem
         props: {}
         isLargeTable: true
+    _owner: { name: _owner, propType_: STRING, allowNull: false }
+    _role: { name: _role, propType_: STRING, allowNull: false }
+    _rev: { name: _rev, propType_: STRING, allowNull: false }
