--- a/git/formuladb-env/db/LargeSalesReport.yaml
+++ b/git/formuladb-env/db/LargeSalesReport.yaml
@@ -1,5 +1,8 @@
 _id: LargeSalesReport
 props:
+    _owner: { name: _owner, propType_: STRING, allowNull: false }
+    _role: { name: _role, propType_: STRING, allowNull: false }
+    _rev: { name: _rev, propType_: STRING, allowNull: false }
     _id:
         name: _id
         propType_: STRING
