--- a/git/formuladb-env/db/OrderItem.yaml
+++ b/git/formuladb-env/db/OrderItem.yaml
@@ -23,6 +23,9 @@ props:
         name: units
         propType_: CHILD_TABLE
         referencedEntityName: InventoryProductUnit
+    _owner: { name: _owner, propType_: STRING, allowNull: false }
+    _role: { name: _role, propType_: STRING, allowNull: false }
+    _rev: { name: _rev, propType_: STRING, allowNull: false }
 autoCorrectionsOnValidationFailed:
     ProductLocation!positiveStock:
         -
