--- a/git/formuladb-env/db/Room_Booking.yaml
+++ b/git/formuladb-env/db/Room_Booking.yaml
@@ -54,3 +54,6 @@ props:
         name: cost
         propType_: FORMULA
         formula: days * 100
+    _owner: { name: _owner, propType_: STRING, allowNull: false }
+    _role: { name: _role, propType_: STRING, allowNull: false }
+    _rev: { name: _rev, propType_: STRING, allowNull: false }
