--- a/git/formuladb-env/db/SampleApp.yaml
+++ b/git/formuladb-env/db/SampleApp.yaml
@@ -55,3 +55,6 @@ props:
         name: guiorder
         propType_: STRING
         allowNull: false
+    _owner: { name: _owner, propType_: STRING, allowNull: false }
+    _role: { name: _role, propType_: STRING, allowNull: false }
+    _rev: { name: _rev, propType_: STRING, allowNull: false }
