--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
         "@ffmpeg-installer/ffmpeg": "^1.0.20",
         "@google-cloud/text-to-speech": "^2.1.2",
         "@types/bootstrap": "^4.3.1",
+        "@types/connect-flash": "0.0.35",
         "@types/d3": "^5.7.2",
         "@types/express": "^4.17.4",
         "@types/express-session": "^1.17.0",
@@ -113,6 +114,7 @@
         "chromedriver": "^79.0.0",
         "cluster-key-slot": "^1.1.0",
         "connect-ensure-login": "^0.1.1",
+        "connect-flash": "^0.1.1",
         "connect-timeout": "^1.9.0",
         "cookie-parser": "~1.4.4",
         "cross-env": "^6.0.3",
