work on register new env

--- a/k8s/overlays/onprem/patches/be-deployment.yaml
+++ b/k8s/overlays/onprem/patches/be-deployment.yaml
@@ -14,6 +14,6 @@ spec:
           value: "true"
         - name: FRMDB_AUTH_ENABLED
           value: "false"
-        - name: FRMDB_IS_PROD_ENV
+        - name: FRMDB_CAN_CREATE_ENV
           value: "true"
 
