--- a/k8s/overlays/ci/kustomization.yaml
+++ b/k8s/overlays/ci/kustomization.yaml
@@ -1,6 +1,7 @@
 bases:
-- ../live
+- ../../base
 patches:
 - patches/be-deployment.yaml
 resources:
 - resources/ingress.yaml
+- resources/git-persistence-persistentvolumeclaim.yaml 
