--- a/k8s/overlays/development/patches/be-deployment.yaml
+++ b/k8s/overlays/development/patches/be-deployment.yaml
@@ -14,7 +14,7 @@ spec:
           value: "true"
         - name: FRMDB_AUTH_ENABLED
           value: "true"
-        - name: FRMDB_IS_PROD_ENV
+        - name: FRMDB_CAN_CREATE_ENV
           value: "true"
       volumes:
       - name: git-persistence
