--- a/k8s/overlays/development/patches/be-deployment.yaml
+++ b/k8s/overlays/development/patches/be-deployment.yaml
@@ -13,7 +13,7 @@ spec:
         - name: FRMDB_IS_DEV_ENV
           value: "true"
         - name: FRMDB_AUTH_ENABLED
-          value: "true"
+          value: "false"
         - name: FRMDB_CAN_CREATE_ENV
           value: "true"
       volumes:
