--- a/package.json
+++ b/package.json
@@ -152,6 +152,7 @@
         "oauth": "^0.9.15",
         "passport": "^0.4.1",
         "passport-local": "^1.0.0",
+        "paypal-ipn": "^3.0.0",
         "pg": "^7.17.1",
         "pg-promise": "10.3.5",
         "pouchdb-collate": "^7.1.1",
