--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -117,28 +117,22 @@
         {
             "name": "remote BE",
             "type": "node",
-            "runtimeArgs": [
-                "--trace-warnings",
-                "--debug-brk",
-                "--inspect=0.0.0.0:9232"
-            ],
-            "trace": true,
-            "protocol": "inspector",
+            "request": "attach",
+            "address": "localhost",
+            "protocol": "auto",
+            "restart": true,
             "port": 9232,
-            "request": "launch",
-            "cwd": "${workspaceRoot}",
-            "program": "${workspaceFolder}/dist-be/frmdb-be.js",
-            "-args": [
-                "init-db"
-            ],
-            "--args": [
-                "fix-html",
-                "${relativeFile}"
-            ],
+            "localRoot": "${workspaceFolder}/dist-be",
+            "remoteRoot": "/dist-be",
             "sourceMaps": true,
             "outFiles": [
-                "${workspaceRoot}/tsc-out/**/*.js",
-            ]
+                "${workspaceFolder}/dist-be/*.js"
+            ],
+            "skipFiles": [
+                "<eval>/**/*.js",
+                "<node_internals>/**/*.js",
+            ],
+            "trace": true
         },
     ],
 }
