--- a/git/formuladb-env/frmdb-apps/hotel-booking/app.yaml
+++ b/git/formuladb-env/frmdb-apps/hotel-booking/app.yaml
@@ -1,8 +1,19 @@
-_id: hotel-booking
-description: Booking app for King Hotel
+_id: $App~~hotel-booking
+description: 'Room Booking, Galery, Contact, Blog'
 homePage: index.html
 pages:
-    - index.html
+    - _footer.html
+    - _form.html
+    - _head.html
+    - _nav.html
+    - _scripts.html
     - about.html
-    - gallery.html
+    - booking.html
     - contact.html
+    - gallery.html
+    - index.html
+category: 'Food & Travel, Booking & Appointments'
+defaultLook: basic
+defaultPrimaryColor: 008cba
+defaultSecondaryColor: eeeeee
+defaultTheme: Clean
