--- a/git/formuladb-env/frmdb-apps/formuladb-io/app.yaml
+++ b/git/formuladb-env/frmdb-apps/formuladb-io/app.yaml
@@ -1,4 +1,9 @@
 _id: formuladb.io
+defaultLook: basic
+defaultPrimaryColor: 008cba
+defaultSecondaryColor: eeeeee
+defaultTheme: Clean
+category: 
 description: formuladb.io
 pages:
     - _footer.html
