--- a/git/formuladb-env/frmdb-apps/photography-services/app.yaml
+++ b/git/formuladb-env/frmdb-apps/photography-services/app.yaml
@@ -1,4 +1,9 @@
 _id: themes
+defaultLook: basic
+defaultPrimaryColor: 008cba
+defaultSecondaryColor: eeeeee
+defaultTheme: Clean
+category: 
 description: themes
 pages:
     - index.html
