--- a/git/formuladb-env/frmdb-apps/users/app.yaml
+++ b/git/formuladb-env/frmdb-apps/users/app.yaml
@@ -1,9 +1,9 @@
 _id: themes
-description: themes
 defaultLook: basic
 defaultPrimaryColor: 008cba
 defaultSecondaryColor: eeeeee
 defaultTheme: Clean
+category: 
 pages:
     - index.html
     - _footer.html
