--- a/git/formuladb-env/frmdb-apps/law-firm/app.yaml
+++ b/git/formuladb-env/frmdb-apps/law-firm/app.yaml
@@ -1,17 +1,15 @@
-_id: themes
+_id: $App~~law-firm
 defaultLook: basic
 defaultPrimaryColor: 008cba
 defaultSecondaryColor: eeeeee
 defaultTheme: Clean
-category: 
-description: themes
+category: Consulting
+description: 'Contracts/documents, portfolio, testimonials, appointments'
 pages:
-    - index.html
     - _footer.html
     - _form.html
+    - _head.html
     - _nav.html
-    - elements.html
-    - page-elements.html
-    - sections.html
-    - test.html
-    - widgets.html
+    - _scripts.html
+    - index.html
+name: law-firm
