--- a/git/formuladb-env/frmdb-apps/photography-services/app.yaml
+++ b/git/formuladb-env/frmdb-apps/photography-services/app.yaml
@@ -1,17 +1,14 @@
-_id: themes
+_id: $App~~photography-services
 defaultLook: basic
 defaultPrimaryColor: 008cba
 defaultSecondaryColor: eeeeee
 defaultTheme: Clean
-category: 
-description: themes
+category: Photography
+description: 'Presentation website, photo shoot appointments'
 pages:
-    - index.html
     - _footer.html
     - _form.html
+    - _head.html
     - _nav.html
-    - elements.html
-    - page-elements.html
-    - sections.html
-    - test.html
-    - widgets.html
+    - _scripts.html
+    - index.html
