--- a/k8s/base/resources/be-deployment.yaml
+++ b/k8s/base/resources/be-deployment.yaml
@@ -7,7 +7,8 @@ spec:
   selector:
     matchLabels:
       service: be
-  strategy: {}
+  strategy:
+    type: Recreate
   template:
     metadata:
       labels:
