--- a/git/formuladb-env/frmdb-apps/pizza-time/app.yaml
+++ b/git/formuladb-env/frmdb-apps/pizza-time/app.yaml
@@ -1,12 +1,14 @@
-_id: themes
+_id: $App~~pizza-time
 description: themes
 pages:
-    - index.html
     - _footer.html
     - _form.html
+    - _head.html
     - _nav.html
-    - elements.html
-    - page-elements.html
-    - sections.html
-    - test.html
-    - widgets.html
+    - _scripts.html
+    - index.html
+name: pizza-time
+defaultLook: basic
+defaultPrimaryColor: 008cba
+defaultSecondaryColor: eeeeee
+defaultTheme: Clean
