--- a/git/formuladb-env/db/InventoryReceipt.yaml
+++ b/git/formuladb-env/db/InventoryReceipt.yaml
@@ -4,13 +4,13 @@ props:
     _id:
         name: _id
         propType_: STRING
-        allowNull: false
+        required: true
     receipt_item_table:
         name: receipt_item_table
         propType_: CHILD_TABLE
         referencedEntityName: ReceiptItem
         props: {}
         isLargeTable: true
-    _owner: { name: _owner, propType_: STRING, allowNull: false }
-    _role: { name: _role, propType_: STRING, allowNull: false }
-    _rev: { name: _rev, propType_: STRING, allowNull: false }
+    _owner: { name: _owner, propType_: STRING, required: true }
+    _role: { name: _role, propType_: STRING, required: true }
+    _rev: { name: _rev, propType_: STRING, required: true }
