--- a/git/formuladb-env/db/LargeSalesReport.yaml
+++ b/git/formuladb-env/db/LargeSalesReport.yaml
@@ -1,16 +1,16 @@
 _id: LargeSalesReport
 props:
-    _owner: { name: _owner, propType_: STRING, allowNull: false }
-    _role: { name: _role, propType_: STRING, allowNull: false }
-    _rev: { name: _rev, propType_: STRING, allowNull: false }
+    _owner: { name: _owner, propType_: STRING, required: true }
+    _role: { name: _role, propType_: STRING, required: true }
+    _rev: { name: _rev, propType_: STRING, required: true }
     _id:
         name: _id
         propType_: STRING
-        allowNull: false
+        required: true
     client:
         name: client
         propType_: STRING
-        allowNull: false
+        required: true
     month:
         name: month
         propType_: DATETIME
