--- a/git/formuladb-env/db/Restaurant_Menu_Item.yaml
+++ b/git/formuladb-env/db/Restaurant_Menu_Item.yaml
@@ -4,19 +4,24 @@ props:
     _id:
         name: _id
         propType_: STRING
-        allowNull: false
+        required: true
     _owner:
         name: _owner
         propType_: STRING
-        allowNull: false
+        required: true
     _role:
         name: _role
         propType_: STRING
-        allowNull: false
+        required: true
     _rev:
         name: _rev
         propType_: STRING
-        allowNull: false
+        required: true
     name:
-        propType_: STRING
         name: name
+        propType_: STRING
+        required: true
+    picture:
+        name: picture
+        propType_: FORMULA
+        formula: IMAGE()
