--- a/git/formuladb-env/db/Room_Booking.yaml
+++ b/git/formuladb-env/db/Room_Booking.yaml
@@ -19,7 +19,7 @@ props:
     _id:
         name: _id
         propType_: STRING
-        allowNull: false
+        required: true
     guest:
         name: guest
         propType_: REFERENCE_TO
@@ -33,19 +33,19 @@ props:
     start_date:
         name: start_date
         propType_: DATETIME
-        allowNull: false
+        required: true
     end_date:
         name: end_date
         propType_: DATETIME
-        allowNull: false
+        required: true
     nb_adults:
         name: nb_adults
         propType_: NUMBER
-        allowNull: false
+        required: true
     nb_children:
         name: nb_children
         propType_: NUMBER
-        allowNull: false
+        required: true
     days:
         name: days
         propType_: FORMULA
@@ -54,6 +54,6 @@ props:
         name: cost
         propType_: FORMULA
         formula: days * 100
-    _owner: { name: _owner, propType_: STRING, allowNull: false }
-    _role: { name: _role, propType_: STRING, allowNull: false }
-    _rev: { name: _rev, propType_: STRING, allowNull: false }
+    _owner: { name: _owner, propType_: STRING, required: true }
+    _role: { name: _role, propType_: STRING, required: true }
+    _rev: { name: _rev, propType_: STRING, required: true }
