--- a/git/formuladb-env/db/WishListRequest.yaml
+++ b/git/formuladb-env/db/WishListRequest.yaml
@@ -4,7 +4,7 @@ props:
     _id:
         name: _id
         propType_: STRING
-        allowNull: false
+        required: true
     app:
         name: app
         propType_: REFERENCE_TO
@@ -13,10 +13,10 @@ props:
     email:
         name: email
         propType_: STRING
-        allowNull: false
+        required: true
     comments:
         name: comments
         propType_: STRING
-    _owner: { name: _owner, propType_: STRING, allowNull: false }
-    _role: { name: _role, propType_: STRING, allowNull: false }
-    _rev: { name: _rev, propType_: STRING, allowNull: false }
+    _owner: { name: _owner, propType_: STRING, required: true }
+    _role: { name: _role, propType_: STRING, required: true }
+    _rev: { name: _rev, propType_: STRING, required: true }
