--- a/git/formuladb-env/db/ReceiptItem.yaml
+++ b/git/formuladb-env/db/ReceiptItem.yaml
@@ -3,7 +3,7 @@ props:
     _id:
         name: _id
         propType_: STRING
-        allowNull: false
+        required: true
     product_id:
         name: product_id
         propType_: REFERENCE_TO
@@ -12,7 +12,7 @@ props:
     quantity:
         name: quantity
         propType_: NUMBER
-        allowNull: false
+        required: true
     price:
         name: price
         propType_: REFERENCE_TO
@@ -22,7 +22,7 @@ props:
         name: units
         propType_: CHILD_TABLE
         referencedEntityName: InventoryProductUnit
-    _owner: { name: _owner, propType_: STRING, allowNull: false }
-    _role: { name: _role, propType_: STRING, allowNull: false }
-    _rev: { name: _rev, propType_: STRING, allowNull: false }
+    _owner: { name: _owner, propType_: STRING, required: true }
+    _role: { name: _role, propType_: STRING, required: true }
+    _rev: { name: _rev, propType_: STRING, required: true }
 isEditable: true
