--- a/git/formuladb-env/db/Restaurant_Order_Item.yaml
+++ b/git/formuladb-env/db/Restaurant_Order_Item.yaml
@@ -4,16 +4,16 @@ props:
     _id:
         name: _id
         propType_: STRING
-        allowNull: false
+        required: true
     _owner:
         name: _owner
         propType_: STRING
-        allowNull: false
+        required: true
     _role:
         name: _role
         propType_: STRING
-        allowNull: false
+        required: true
     _rev:
         name: _rev
         propType_: STRING
-        allowNull: false
+        required: true
