--- a/git/formuladb-env/db/Room_Type.yaml
+++ b/git/formuladb-env/db/Room_Type.yaml
@@ -4,15 +4,15 @@ props:
     _id:
         name: _id
         propType_: STRING
-        allowNull: false
+        required: true
     name:
         name: name
         propType_: STRING
-        allowNull: false
+        required: true
     description:
         name: description
         propType_: STRING
-        allowNull: false
+        required: true
     picture:
         name: picture
         propType_: IMAGE
@@ -22,7 +22,7 @@ props:
     price:
         name: price
         propType_: NUMBER
-        allowNull: false
+        required: true
     wifi:
         name: wifi
         propType_: BOOLEAN
@@ -33,6 +33,6 @@ props:
         name: total_number_of_rooms
         propType_: FORMULA
         formula: 'COUNTIF(Room, room_type == @[_id])'
-    _owner: { name: _owner, propType_: STRING, allowNull: false }
-    _role: { name: _role, propType_: STRING, allowNull: false }
-    _rev: { name: _rev, propType_: STRING, allowNull: false }
+    _owner: { name: _owner, propType_: STRING, required: true }
+    _role: { name: _role, propType_: STRING, required: true }
+    _rev: { name: _rev, propType_: STRING, required: true }
