--- a/git/formuladb-env/frmdb-apps/basic-inventory/InventoryProduct.yaml
+++ b/git/formuladb-env/frmdb-apps/basic-inventory/InventoryProduct.yaml
@@ -3,18 +3,18 @@ props:
     _id:
         name: _id
         propType_: STRING
-        allowNull: false
+        required: true
     code:
         name: code
         propType_: STRING
-        allowNull: false
+        required: true
     barcode:
         name: barcode
         propType_: STRING
     name:
         name: name
         propType_: STRING
-        allowNull: false
+        required: true
     description:
         name: description
         propType_: STRING
