--- a/git/formuladb-env/frmdb-apps/basic-inventory/LargeSalesReport.yaml
+++ b/git/formuladb-env/frmdb-apps/basic-inventory/LargeSalesReport.yaml
@@ -3,11 +3,11 @@ props:
     _id:
         name: _id
         propType_: STRING
-        allowNull: false
+        required: true
     client:
         name: client
         propType_: STRING
-        allowNull: false
+        required: true
     month:
         name: month
         propType_: DATETIME
