--- a/git/formuladb-env/frmdb-apps/basic-inventory/ReceiptItem.yaml
+++ b/git/formuladb-env/frmdb-apps/basic-inventory/ReceiptItem.yaml
@@ -3,7 +3,7 @@ props:
     _id:
         name: _id
         propType_: STRING
-        allowNull: false
+        required: true
     product_id:
         name: product_id
         propType_: REFERENCE_TO
@@ -12,7 +12,7 @@ props:
     quantity:
         name: quantity
         propType_: NUMBER
-        allowNull: false
+        required: true
     price:
         name: price
         propType_: REFERENCE_TO
