form are special, elements can have data binding even if they are children of other records

--- a/git/formuladb-env/db/Restaurant_Order_Item.yaml
+++ b/git/formuladb-env/db/Restaurant_Order_Item.yaml
@@ -17,3 +17,19 @@ props:
         name: _rev
         propType_: STRING
         required: true
+    order_id:
+        name: order_id
+        propType_: REFERENCE_TO
+        referencedEntityName: Restaurant_Order
+        referencedPropertyName: _id
+        referencedEntityAlias: 'true'
+    menu_item_id:
+        name: menu_item_id
+        propType_: REFERENCE_TO
+        referencedEntityName: Restaurant_Menu_Item
+        referencedPropertyName: _id
+        referencedEntityAlias: 'true'
+    quantity:
+        name: quantity
+        propType_: NUMBER
+        required: true
