--- a/k8s/extras/elasticstack/filebeat-kubernetes.yaml
+++ b/k8s/extras/elasticstack/filebeat-kubernetes.yaml
@@ -23,8 +23,18 @@ data:
 
     output.elasticsearch:
       hosts: ['${ELASTICSEARCH_HOST:elasticsearch}:${ELASTICSEARCH_PORT:9200}']
+      indices:
+        - index: "filebeat-%{[agent.version]}-%{[kubernetes.namespace]}-%{+yyyy.MM.dd}"
+          when:
+            has_fields: ['kubernetes.namespace']
+        - index: "filebeat-%{[agent.version]}-no-namespace-%{+yyyy.MM.dd}"
+          when:
+            not:
+              has_fields: ['kubernetes.namespace']
     setup.template.enabled: true
     setup.template.name: "filebeat"
+    setup.template.pattern: "filebeat-*"
+    setup.ilm.enabled: false
     setup.template.fields: "fields.yml"
 ---
 apiVersion: v1
