--- a/k8s/extras/local-dev/filebeat.yaml
+++ b/k8s/extras/local-dev/filebeat.yaml
@@ -31,6 +31,14 @@ data:
       hosts: ['${ELASTICSEARCH_HOST:elasticsearch}:${ELASTICSEARCH_PORT:9200}']
       username: ${ELASTICSEARCH_USERNAME}
       password: ${ELASTICSEARCH_PASSWORD}
+      indices:
+        - index: "filebeat-%{[agent.version]}-%{[kubernetes.namespace]}-%{+yyyy.MM.dd}"
+          when:
+            has_fields: ['kubernetes.namespace']
+        - index: "filebeat-%{[agent.version]}-no-namespace-%{+yyyy.MM.dd}"
+          when:
+            not:
+              has_fields: ['kubernetes.namespace']
 ---
 apiVersion: apps/v1
 kind: DaemonSet
