--- a/k8s/base/kustomization.yaml
+++ b/k8s/base/kustomization.yaml
@@ -1,4 +1,4 @@
-namespace: frmdb-loi-dev-login-stuff #TBD_ENV_NAME
+namespace: frmdb-master #TBD_ENV_NAME
 resources:
 - resources/be-deployment.yaml
 - resources/be-service.yaml
