fixes on formula editor, added KEY property type

--- a/git/formuladb-env/db/Restaurant_Order_Item.yaml
+++ b/git/formuladb-env/db/Restaurant_Order_Item.yaml
@@ -3,8 +3,8 @@ isEditable: true
 props:
     _id:
         name: _id
-        propType_: STRING
-        required: true
+        propType_: KEY
+        scalarFormula: 'CONCATENATE(order_id, "--", menu_item_id)'
     _owner:
         name: _owner
         propType_: STRING
