work on multi object view update in the same transaction; needed for _id change, multi-level DAG formulas

--- a/git/formuladb-env/db/Restaurant_Menu_Item.yaml
+++ b/git/formuladb-env/db/Restaurant_Menu_Item.yaml
@@ -3,8 +3,8 @@ isEditable: true
 props:
     _id:
         name: _id
-        propType_: STRING
-        required: true
+        propType_: KEY
+        scalarFormula: name
     _owner:
         name: _owner
         propType_: STRING
