--- a/k8s/overlays/ci/patches/be-sts.yaml
+++ b/k8s/overlays/ci/patches/be-sts.yaml
@@ -1,5 +1,5 @@
 apiVersion: apps/v1
-kind: Deployment
+kind: StatefulSet
 metadata:
   name: be
 spec:
@@ -16,3 +16,11 @@ spec:
           value: "false"
         - name: FRMDB_IS_PROD_ENV
           value: "true"
+  volumeClaimTemplates:
+  - metadata:
+      name: git-persistence
+    spec:
+      accessModes: [ ReadWriteOnce ]
+      resources:
+        requests:
+          storage: 5Gi
