--- a/k8s/overlays/live/kustomization.yaml
+++ b/k8s/overlays/live/kustomization.yaml
@@ -2,4 +2,5 @@ bases:
 - ../../base
 resources:
 - resources/production-issuer.yaml
-- resources/git-persistence-persistentvolumeclaim.yaml 
+patches:
+- patches/be-sts.yaml
