--- a/k8s/base/kustomization.yaml
+++ b/k8s/base/kustomization.yaml
@@ -1,17 +1,16 @@
-namespace: frmdb-loi-dev-login-stuff #TBD_ENV_NAME
+namespace: frmdb-deployment-to-statefulset #TBD_ENV_NAME
 resources:
-- resources/be-deployment.yaml
+- resources/be-sts.yaml
 - resources/be-service.yaml
-- resources/db-deployment.yaml
+- resources/db-sts.yaml
 - resources/db-service.yaml
-- resources/pg-persistence-persistentvolumeclaim.yaml 
 - resources/service-account-secret.yaml
 # - resources/pg-backup-deployment.yaml
 #wildcard support removed for some reason https://github.com/kubernetes-sigs/kustomize/issues/119
 vars:
 - name: NAMESPACE_NAME
   objref:
-    kind: Deployment
+    kind: StatefulSet
     name: be
     apiVersion: apps/v1
   fieldref:
