--- a/k8s/base/resources/be-sts.yaml
+++ b/k8s/base/resources/be-sts.yaml
@@ -1,5 +1,5 @@
 apiVersion: apps/v1
-kind: Deployment
+kind: StatefulSet
 metadata:
   name: be
 spec:
@@ -7,8 +7,7 @@ spec:
   selector:
     matchLabels:
       service: be
-  strategy:
-    type: Recreate
+  serviceName: be
   template:
     metadata:
       labels:
@@ -55,10 +54,6 @@ spec:
           items:
           - key: sa_json
             path: sa_credentials.json
-      - name: git-persistence
-        persistentVolumeClaim:
-          claimName: git-persistence
       restartPolicy: Always
       imagePullSecrets:
         - name: regcred
-status: {}
