--- a/k8s/base/resources/db-sts.yaml
+++ b/k8s/base/resources/db-sts.yaml
@@ -1,16 +1,13 @@
 apiVersion: apps/v1
-kind: Deployment
+kind: StatefulSet
 metadata:
-  labels:
-    service: db
   name: db
 spec:
   replicas: 1
   selector:
     matchLabels:
       service: db
-  strategy:
-    type: Recreate
+  serviceName: db
   template:
     metadata:
       labels:
@@ -30,8 +27,11 @@ spec:
           name: pg-persistence
           subPath: postgres
       restartPolicy: Always
-      volumes:
-      - name: pg-persistence
-        persistentVolumeClaim:
-          claimName: pg-persistence
-status: {}
+  volumeClaimTemplates:
+  - metadata:
+      name: pg-persistence
+    spec:
+      accessModes: [ ReadWriteOnce ]
+      resources:
+        requests:
+          storage: 10Gi
