--- a/k8s/overlays/ci/kustomization.yaml
+++ b/k8s/overlays/ci/kustomization.yaml
@@ -1,7 +1,6 @@
 bases:
 - ../../base
 patches:
-- patches/be-deployment.yaml
+- patches/be-sts.yaml
 resources:
 - resources/ingress.yaml
-- resources/git-persistence-persistentvolumeclaim.yaml 
