--- a/k8s/overlays/development/patches/be-sts.yaml
+++ b/k8s/overlays/development/patches/be-sts.yaml
@@ -1,5 +1,5 @@
 apiVersion: apps/v1
-kind: Deployment
+kind: StatefulSet
 metadata:
   name: be
 spec:
@@ -13,8 +13,12 @@ spec:
         - name: FRMDB_IS_DEV_ENV
           value: "true"
         - name: FRMDB_AUTH_ENABLED
-          value: "true"
-        - name: FRMDB_CAN_CREATE_ENV
           value: "false"
-        - name: BUILD_CI
+        - name: FRMDB_CAN_CREATE_ENV
           value: "true"
+      volumes:
+      - name: git-persistence
+        persistentVolumeClaim:
+        hostPath:
+          path: /home/soica/formuladb/febe/git #TDB_PWD_ENV_DIR
+          type: Directory
