--- a/k8s/overlays/localci/patches/be-sts.yaml
+++ b/k8s/overlays/localci/patches/be-sts.yaml
@@ -1,5 +1,5 @@
 apiVersion: apps/v1
-kind: Deployment
+kind: StatefulSet
 metadata:
   name: be
 spec:
@@ -13,7 +13,8 @@ spec:
         - name: FRMDB_IS_DEV_ENV
           value: "true"
         - name: FRMDB_AUTH_ENABLED
-          value: "false"
-        - name: FRMDB_CAN_CREATE_ENV
           value: "true"
-
+        - name: FRMDB_CAN_CREATE_ENV
+          value: "false"
+        - name: BUILD_CI
+          value: "true"
